# package_identification_using_turtlebot

./: .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  QBot- Final Presentation.pptx  README.md  dependencies.rosinstall  package.xml
docs/: index.html
docs/html/: annotated.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f5bddf891585204f7e7051d55fc42939.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  index.html  md_README.html  pages.html
docs/html/d0/d91/: PathPlannerTest_8cpp.html
docs/html/d0/dd1/: classQReader-members.html
docs/html/d2/d8f/: classPathPlanner-members.html
docs/html/d2/db2/: classQReader.html
docs/html/d3/d9a/: QReaderTest_8cpp.html
docs/html/d3/df3/: QReader_8cpp.html
docs/html/d4/d15/: test_2main_8cpp.html
docs/html/d4/dbd/: PathPlanner_8cpp.html
docs/html/d6/d0b/: PathPlanner_8hpp.html  PathPlanner_8hpp_source.html
docs/html/d7/d40/: QReader_8hpp.html  QReader_8hpp_source.html
docs/html/d9/d45/: classPathPlanner.html
docs/html/da/d9e/: CMakeLists_8txt.html
docs/html/da/ddd/: README_8md.html
docs/html/dd/d64/: cpplint_8txt.html
docs/html/de/d02/: cppcheck_8txt.html
docs/html/de/dfb/: src_2main_8cpp.html
docs/html/df/d0a/: main_8cpp.html
docs/html/search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_f5bddf891585204f7e7051d55fc42939.tex  files.tex  index.tex  md_README.tex  refman.tex
docs/latex/d0/d91/: PathPlannerTest_8cpp.tex
docs/latex/d2/db2/: classQReader.tex
docs/latex/d3/d9a/: QReaderTest_8cpp.tex
docs/latex/d3/df3/: QReader_8cpp.tex
docs/latex/d4/d15/: test_2main_8cpp.tex
docs/latex/d4/dbd/: PathPlanner_8cpp.tex
docs/latex/d6/d0b/: PathPlanner_8hpp.tex
docs/latex/d7/d40/: QReader_8hpp.tex
docs/latex/d9/d45/: classPathPlanner.tex
docs/latex/dd/d64/: cpplint_8txt.tex
docs/latex/de/d02/: cppcheck_8txt.tex
docs/latex/de/dfb/: src_2main_8cpp.tex
docs/latex/df/d0a/: main_8cpp.tex
include/Package_Identification_using_Turtlebot/: QReader.hpp
include/package_identification_using_turtlebot/: PathPlanner.hpp  QReader.hpp
launch/: demo.launch  turtlebot_warehouse.launch  warehouse.launch
launch/includes/: kobuki.launch.xml
map/: map.pgm  map.yaml
models/QR1/: model.config  model.sdf
models/QR1/meshes/: QR1.dae
models/QR2/: model.config  model.sdf
models/QR2/meshes/: QR2.dae
models/QR3/: model.config  model.sdf
models/QR3/meshes/: QR3.dae
models/QR4/: model.config  model.sdf
models/QR4/meshes/: QR4.dae
results/: cppcheck.txt  cpplint.txt
src/: PathPlanner.cpp  QReader.cpp  main.cpp  sendGoals.cpp
test/: PathPlannerTest.cpp  QReaderTest.cpp  Qbot.test  main.cpp
worlds/: warehouse.world
